--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,17 @@
     "type": "project",
 	"keywords": ["shell","carddav","contacts","owncloud","davical","nextcloud"],
 	"homepage": "https://github.com/mstilkerich/davshell",
-	"license": "GPL-2.0-or-later",
+	"license": "GPL-3.0-or-later",
 	"authors": [
 		{
 			"name": "Michael Stilkerich",
-			"email": "michael@stilkerich.eu",
+			"email": "ms@mike2k.de",
 			"homepage": "https://github.com/mstilkerich",
 			"role": "Developer"
 		}
 	],
 	"support": {
-		"email": "ms+davshell@mike2k.de",
+		"email": "ms@mike2k.de",
 		"issues": "https://github.com/mstilkerich/davshell/issues",
 		"source": "https://github.com/mstilkerich/davshell",
 		"docs": "https://github.com/mstilkerich/davshell"
@@ -35,10 +35,5 @@
     "require-dev": {
         "vimeo/psalm": "^3.11"
     },
-	"repositories": [
-		{
-			"type": "vcs",
-			"url": "file:///home/mikey/projects/carddavclient"
-		}
-	]
+	"bin": ["src/davshell.php"]
 }
